[Feature] Docs Generating and linked in ReadMe

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     },
     "files": [
         "dist/",
-        "loader/"
+        "loader/",
+        "docs/"
     ],
     "scripts": {
         "build": "stencil build --docs",
