--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ortsarchiv-gemeinlebarn/components",
-    "version": "2.9.0",
+    "version": "2.10.0",
     "description": "Ortsarchiv Gemeinelbarn Web Components",
     "author": {
         "name": "Jakob Vesely",
@@ -32,7 +32,8 @@
     },
     "dependencies": {
         "@stencil/core": "^4.3.0",
-        "ol": "^8.1.0"
+        "ol": "^8.1.0",
+        "simplelightbox": "^2.14.2"
     },
     "devDependencies": {
         "@stencil/sass": "^3.0.5",
