--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ortsarchiv-gemeinlebarn/components",
-    "version": "2.14.0",
+    "version": "2.15.0",
     "description": "Ortsarchiv Gemeinelbarn Web Components",
     "author": {
         "name": "Jakob Vesely",
@@ -31,17 +31,13 @@
         "generate": "stencil generate"
     },
     "dependencies": {
-        "@stencil/core": "^4.3.0",
+        "@stencil/core": "^4.7.0",
         "ol": "^8.1.0",
         "simplelightbox": "^2.14.2"
     },
     "devDependencies": {
-        "@stencil/sass": "^3.0.5",
-        "@types/jest": "^29.5.6",
-        "@types/node": "^20.8.7",
-        "jest": "^29.7.0",
-        "jest-cli": "^29.7.0",
-        "puppeteer": "^21.4.0"
+        "@stencil/sass": "^3.0.7",
+        "@types/node": "^20.8.10"
     },
     "license": "MIT"
 }
