--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "skipLibCheck": true,
+        "skipLibCheck": false,
         "allowSyntheticDefaultImports": true,
         "allowUnreachableCode": false,
         "declaration": false,
