--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ortsarchiv-gemeinlebarn/components",
-    "version": "2.17.0",
+    "version": "2.17.1",
     "description": "Ortsarchiv Gemeinelbarn Web Components",
     "author": {
         "name": "Jakob Vesely",
@@ -37,7 +37,8 @@
     },
     "devDependencies": {
         "@stencil/sass": "^3.1.7",
-        "@types/node": "^22.13.8"
+        "@types/node": "^22.13.8",
+        "sass-embedded": "^1.85.1"
     },
     "license": "MIT"
 }
